# aravoxel-rs

./: Cargo.toml  build.rs  settings.toml
assets/shaders/: light.wgsl  shader.wgsl
src/: engine.rs  main.rs  scene.rs  voxel.rs
src/engine/: aravoxel.rs  assets.rs  resource.rs  resource_manager.rs  util.rs  utils.rs
src/engine/resource/: instance.rs  light.rs  model.rs  texture.rs
src/engine/resources/: texture.rs
src/entity/: camera.rs
src/mesh/: mesh.rs
src/meshes/: mesh.rs
src/scene/: scene.rs  voxel_world.rs  wgpu_tutorial.rs
src/scenes/: scene.rs  wgpu_tutorial.rs
src/shaders/: chunk_mesh.wgsl  shader.wgsl
src/voxel/: chunk.rs  util.rs  world.rs
