[package]
name = "aravoxel"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
log = "0.4.20"
pollster = "0.3.0"
pretty_env_logger = "0.5.0"
wgpu = "0.19.1"
winit = "0.29.10"
bytemuck = { version = "1.14.3", features = ["derive"] }
image = { version = "0.24.8", default-features = false, features = ["png", "jpeg"] }
anyhow = "1.0.80"
glam = { version = "0.25.0", features = ["bytemuck"] }
tobj = { version = "4.0.1", features = ["async"] }

[build-dependencies]
anyhow = "1.0.80"
fs_extra = "1.3.0"
glob = "0.3.1"